--- a/app/blogengine/templates/base.html
+++ b/app/blogengine/templates/base.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-expand-lg bg-light" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Django</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'posts_list_url' %}">Posts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active " aria-current="page" href="{% url 'tags_list_url' %}">Tags</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
@@ -46,7 +49,7 @@
             {% block content %}
             The is no any content for you
             {% endblock %}
-        </div>
+        </di
     </div>
 </div>
 
