--- a/app/blogengine/templates/base.html
+++ b/app/blogengine/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <title>
         {% block title %}
             Blog Engine
@@ -45,7 +47,7 @@
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-5 offset-md-1">
+        <div class="col-12 offset-md-1">
             {% block content %}
             The is no any content for you
             {% endblock %}
