--- a/app/blogengine/templates/base.html
+++ b/app/blogengine/templates/base.html
@@ -25,10 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'posts_list_url' %}">Posts</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'posts_list_url' %}">Posts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" href="{% url 'tags_list_url' %}">Tags</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'tags_list_url' %}">Tags</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
