--- a/app/blogengine/templates/base.html
+++ b/app/blogengine/templates/base.html
@@ -16,7 +16,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-light" style="background-color: #e3f2fd;">
     <div class="container">
-        <a class="navbar-brand" href="#"><span style="color:blue">M</span>Project</a>
+        <a class="navbar-brand" href="#"><span style="color:blue">My</span>Project</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
